--- a/angular/src/app/main-components/header/header.component.html
+++ b/angular/src/app/main-components/header/header.component.html
@@ -1,84 +1,55 @@
-<header>
-  <nav class="navbar bg-light">
-    <div class="container-fluid">
-      <div class="d-flex align-items-center justify-content-between w-100">
-        <a class="navbar-brand" routerLink="/">
-          <img
-            src="../../../assets/img/logo.png"
-            alt="website's image"
-            class="d-inline-block align-top"
-          />
-        </a>
-        <ul class="d-none d-sm-block navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              aria-current="page"
-              routerLink="/home"
-              routerLinkActive="active"
-              >Home</a
-            >
-          </li>
-        </ul>
-        <div
-          *ngIf="isLoggedIn$ | async; else loggedOut"
-          class="d-flex align-items-center"
-        >
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-              (input)="onSearch($event)"
-            />
-          </form>
-
-          <div class="">
-            <a routerLink="/profile">
-              <img
-                id="profile"
-                [src]="user?.userImage"
-                alt="mdo"
-                class="rounded-circle"
-              />
-            </a>
-          </div>
-          <div ngbDropdown class="d-inline-block" placement="bottom-end">
-            <button
-              type="button"
-              class="btn"
-              id="dropdownBasic1"
-              ngbDropdownToggle
-            ></button>
-            <div
-              ngbDropdownMenu
-              aria-labelledby="dropdownBasic1"
-              class="dropdown-menu-end"
-            >
-              <button ngbDropdownItem routerLink="/profile">Profile</button>
-              <hr />
-              <button ngbDropdownItem (click)="logout()">Sign out</button>
-            </div>
-          </div>
-        </div>
-        <ng-template #loggedOut>
-          <div class="d-flex">
-            <a
-              class="nav-link"
-              routerLink="/auth/login"
-              routerLinkActive="active"
-              >Login</a
-            >
-            <a
-              class="nav-link ms-3"
-              routerLink="/auth/register"
-              routerLinkActive="active"
-              >Register</a
-            >
-          </div>
-        </ng-template>
-      </div>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+          >
+            Dropdown
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider" /></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input
+          class="form-control me-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
     </div>
-  </nav>
-</header>
+  </div>
+</nav>
