--- a/angular/src/app/pages/users/users.component.html
+++ b/angular/src/app/pages/users/users.component.html
@@ -1,1 +1,34 @@
-<p>users works!</p>
+<div class="card mb-3" *ngFor="let user of users">
+  <div class="row g-0">
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{ user.name }}</h5>
+        <p class="card-text">{{ user.role }}</p>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card-body">
+        <button class="btn btn-danger" (click)="deleteUser(user.id)">
+          Delete
+        </button>
+        <button class="btn btn-info" (click)="updateUser(user.id, user)">
+          Edit
+        </button>
+        <button
+          class="btn btn-success"
+          *ngIf="user.role === 'auth'"
+          (click)="upgradeUser(user.id)"
+        >
+          Upgrade
+        </button>
+        <button
+          class="btn btn-warning"
+          *ngIf="user.role === 'sub-admin'"
+          (click)="downgradeUser(user.id)"
+        >
+          Downgrade
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
