--- a/angular/src/app/pages/profile/create-light-novel/create-light-novel.component.html
+++ b/angular/src/app/pages/profile/create-light-novel/create-light-novel.component.html
@@ -1,1 +1,5 @@
-<p>create-light-novel works!</p>
+<div class="row">
+  <div class="col">
+    <form [formGroup]="createLightNovelForm"></form>
+  </div>
+</div>
