--- a/angular/src/app/pages/profile/create-light-novel/create-light-novel.component.html
+++ b/angular/src/app/pages/profile/create-light-novel/create-light-novel.component.html
@@ -1,5 +1,1 @@
-<div class="row">
-  <div class="col">
-    <form [formGroup]="createLightNovelForm"></form>
-  </div>
-</div>
+<app-create-light-novel></app-create-light-novel>
