--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -1,13 +1,119 @@
-<div class="row">
-  <div class="col">
-    <form [formGroup]="createLightNovelForm">
-      <input
-        type="text"
-        formControlName="title"
-        class="form-control"
-        placeholder="Write your title..."
-      />
-      <textarea name="" formControlName="plot" class="form-control"></textarea>
-    </form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col col-md-10 col-lg-8">
+      <section class="form-signin m-auto mt-5">
+        <form [formGroup]="createLightNovelForm">
+          <h1 class="h3 text-center mb-3 fw-normal">Crea la tua Light Novel</h1>
+          <label for="title">Inserisci il titolo*</label>
+          <input
+            type="text"
+            formControlName="title"
+            class="form-control"
+            placeholder="Write your title..."
+            name="title"
+            id="title"
+          />
+          <label for="plot">Inserisci una breve trama</label>
+          <textarea
+            name="plot"
+            formControlName="plot"
+            class="form-control"
+            id="plot"
+          ></textarea>
+          <label for="description">Inserisci una breve descrizione</label>
+          <textarea
+            name="description"
+            formControlName="description"
+            class="form-control"
+            id="description"
+          ></textarea>
+          <div *ngFor="let genre of genreArr">
+            <label for="{{ genre }}">{{ genre }}</label>
+            <input
+              type="checkbox"
+              formControlName="genre"
+              value="{{ genre }}"
+              id="{{ genre }}"
+            />
+          </div>
+          <label for="file">Inserisce la copertina della Light-novel</label>
+          <input
+            type="file"
+            formControlName="image_url"
+            class="form-control"
+            id="file"
+          />
+          <label for="part1"> Inserisci la prima sezione interattiva</label>
+          <input
+            type="text"
+            formControlName="part1"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part1"
+          />
+          <label for="part2a">
+            Inserisci la seconda sezione (2A) interattiva</label
+          >
+          <input
+            type="text"
+            formControlName="part2a"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part2a"
+          />
+          <label for="part2b">
+            Inserisci la seconda sezione (2B) interattiva</label
+          >
+          <input
+            type="text"
+            formControlName="part2b"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part2b"
+          />
+          <label for="part3a"
+            >Inserisci la terza sezione (3A) interattiva</label
+          >
+          <input
+            type="text"
+            formControlName="part3a"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part3a"
+          />
+          <label for="part3b"
+            >Inserisci la terza sezione (3B) interattiva</label
+          >
+          <input
+            type="text"
+            formControlName="part3b"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part3b"
+          />
+          <label for="part3c"
+            >Inserisci la terza sezione (3C) interattiva</label
+          >
+          <input
+            type="text"
+            formControlName="part3c"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part3c"
+          />
+          <label for="part3d"
+            >Inserisci la terza sezione (3B) interattiva</label
+          >
+          <input
+            type="text"
+            formControlName="part3d"
+            class="form-control"
+            placeholder="Write the section interactive..."
+            id="part3d"
+          />
+          <button class="btn btn-primary">Crea</button>
+        </form>
+      </section>
+    </div>
   </div>
 </div>
