--- a/angular/src/app/main-components/header/header.component.html
+++ b/angular/src/app/main-components/header/header.component.html
@@ -1,13 +1,73 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" routerLink="/">Navbar</a>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <li class="nav-item" *ngFor="let link of links">
+          <a
+            class="nav-link"
+            [routerLink]="link.url"
+            routerLinkActive="active"
+            >{{ link.name }}</a
+          >
         </li>
       </ul>
+      <div
+        *ngIf="isLoggedIn$ | async; else loggedOut"
+        class="d-flex align-items-center"
+      >
+        <form class="d-flex" role="search">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+            (input)="onSearch($event)"
+          />
+        </form>
+
+        <div class="">
+          <a routerLink="/profile">
+            <img
+              id="profile"
+              [src]="user?.userImage"
+              alt="mdo"
+              class="rounded-circle"
+            />
+          </a>
+        </div>
+        <div ngbDropdown class="d-inline-block" placement="bottom-end">
+          <button
+            type="button"
+            class="btn"
+            id="dropdownBasic1"
+            ngbDropdownToggle
+          ></button>
+          <div
+            ngbDropdownMenu
+            aria-labelledby="dropdownBasic1"
+            class="dropdown-menu-end"
+          >
+            <button ngbDropdownItem routerLink="/profile">Profile</button>
+            <hr />
+            <button ngbDropdownItem (click)="logout()">Sign out</button>
+          </div>
+        </div>
+      </div>
+      <ng-template #loggedOut>
+        <div class="d-flex">
+          <a class="nav-link" routerLink="/auth/login" routerLinkActive="active"
+            >Login</a
+          >
+          <a
+            class="nav-link ms-3"
+            routerLink="/auth/register"
+            routerLinkActive="active"
+            >Register</a
+          >
+        </div>
+      </ng-template>
     </div>
   </div>
 </nav>
