refactor: Update home component UI and add lazy loading for images

--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,7 +1,14 @@
 <div class="container">
   <div class="row">
-    <div class="col">
-      <p>home works!</p>
+    <div class="col-12">
+      <h2>AREA CAROSELLO</h2>
     </div>
+    <div class="col"></div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h2>LIGHT NOVEL DI STO CA..</h2>
+    </div>
+    <div class="col" *ngFor="let lightNovel of lightNovelsArray"></div>
   </div>
 </div>
