--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -1,1 +1,27 @@
-<p>card-home works!</p>
+<div class="card d-flex flex-column align-items-center my-3">
+  <a routerLink="/lightNovelDetail/{{ lightNovelCard.id }}">
+    <img
+      [src]="lightNovelCard.image_url"
+      class="card-img-top"
+      alt="{{ lightNovelCard.title }}"
+    />
+  </a>
+  <div
+    class="card-body d-flex flex-column align-items-center justify-content-center"
+  >
+    <div class="d-flex">
+      <a routerLink="/lightNovelDetail/{{ lightNovelCard.id }}">
+        <h5 class="card-title text-center">{{ lightNovelCard.title }}</h5></a
+      >
+      <i
+        class="ms-2 bi"
+        [ngClass]="isFavourite ? 'bi-heart-fill text-danger' : 'bi-heart'"
+        (click)="toggleFavourite($event)"
+      ></i>
+    </div>
+    <div class="text-center">
+      <p class="card-text">{{ lightNovelCard.created_at }}</p>
+      <p class="card-text">{{ lightNovelCard.description }}</p>
+    </div>
+  </div>
+</div>
