refactor: Update profile module to include LightNovelFormComponent and update routing

--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -4,6 +4,7 @@
       <section class="form-signin m-auto mt-5">
         <form [formGroup]="createLightNovelForm">
           <h1 class="h3 text-center mb-3 fw-normal">Crea la tua Light Novel</h1>
+
           <label for="title">Inserisci il titolo*</label>
           <input
             type="text"
@@ -13,6 +14,7 @@
             name="title"
             id="title"
           />
+
           <label for="plot">Inserisci una breve trama</label>
           <textarea
             name="plot"
@@ -20,6 +22,7 @@
             class="form-control"
             id="plot"
           ></textarea>
+
           <label for="description">Inserisci una breve descrizione</label>
           <textarea
             name="description"
@@ -27,15 +30,24 @@
             class="form-control"
             id="description"
           ></textarea>
-          <div *ngFor="let genre of genreArr">
+
+          <div *ngFor="let genre of genreArr; let i = index">
             <label for="{{ genre }}">{{ genre }}</label>
             <input
               type="checkbox"
-              formControlName="genre"
+              formControlName="{{ genre }}"
               value="{{ genre }}"
               id="{{ genre }}"
             />
           </div>
+
+          <div formArrayName="genre">
+            <div *ngFor="let genre of genreArr; let i = index">
+              <label for="{{ genre }}">{{ genre }}</label>
+              <input type="checkbox" [formControlName]="i" id="{{ genre }}" />
+            </div>
+          </div>
+
           <label for="file">Inserisce la copertina della Light-novel</label>
           <input
             type="file"
@@ -43,74 +55,88 @@
             class="form-control"
             id="file"
           />
-          <label for="part1"> Inserisci la prima sezione interattiva</label>
-          <input
-            type="text"
-            formControlName="part1"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part1"
-          />
-          <label for="part2a">
-            Inserisci la seconda sezione (2A) interattiva</label
-          >
-          <input
-            type="text"
-            formControlName="part2a"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part2a"
-          />
-          <label for="part2b">
-            Inserisci la seconda sezione (2B) interattiva</label
-          >
-          <input
-            type="text"
-            formControlName="part2b"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part2b"
-          />
-          <label for="part3a"
-            >Inserisci la terza sezione (3A) interattiva</label
-          >
-          <input
-            type="text"
-            formControlName="part3a"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part3a"
-          />
-          <label for="part3b"
-            >Inserisci la terza sezione (3B) interattiva</label
-          >
-          <input
-            type="text"
-            formControlName="part3b"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part3b"
-          />
-          <label for="part3c"
-            >Inserisci la terza sezione (3C) interattiva</label
-          >
-          <input
-            type="text"
-            formControlName="part3c"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part3c"
-          />
-          <label for="part3d"
-            >Inserisci la terza sezione (3B) interattiva</label
-          >
-          <input
-            type="text"
-            formControlName="part3d"
-            class="form-control"
-            placeholder="Write the section interactive..."
-            id="part3d"
-          />
+
+          <div formGroupName="story">
+            <label for="part1">Inserisci la prima sezione interattiva</label>
+            <input
+              type="text"
+              formControlName="part1"
+              class="form-control"
+              placeholder="Write the section interactive..."
+              id="part1"
+            />
+
+            <div formGroupName="part2">
+              <label for="part2a"
+                >Inserisci la seconda sezione (2A) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part2a"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part2a"
+              />
+
+              <label for="part2b"
+                >Inserisci la seconda sezione (2B) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part2b"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part2b"
+              />
+            </div>
+
+            <div formGroupName="part3">
+              <label for="part3a"
+                >Inserisci la terza sezione (3A) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3a"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3a"
+              />
+
+              <label for="part3b"
+                >Inserisci la terza sezione (3B) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3b"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3b"
+              />
+
+              <label for="part3c"
+                >Inserisci la terza sezione (3C) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3c"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3c"
+              />
+
+              <label for="part3d"
+                >Inserisci la terza sezione (3D) interattiva</label
+              >
+              <input
+                type="text"
+                formControlName="part3d"
+                class="form-control"
+                placeholder="Write the section interactive..."
+                id="part3d"
+              />
+            </div>
+          </div>
+
           <button class="btn btn-primary">Crea</button>
         </form>
       </section>
