--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -1,25 +1,25 @@
-<div class="card d-flex flex-column align-items-center my-3">
+<div class="card d-flex align-items-center my-3 flex-row">
   <a routerLink="/lightNovelDetail/{{ lightNovelCard.id }}">
     <img
       [src]="lightNovelCard.image_url"
-      class="card-img-top"
+      class="card-img-left"
       alt="{{ lightNovelCard.title }}"
     />
   </a>
   <div
-    class="card-body d-flex flex-column align-items-center justify-content-center"
+    class="card-body d-flex flex-column align-items-start justify-content-center ms-3"
   >
-    <div class="d-flex">
+    <div class="d-flex align-items-center">
       <a routerLink="/lightNovelDetail/{{ lightNovelCard.id }}">
-        <h5 class="card-title text-center">{{ lightNovelCard.title }}</h5></a
-      >
+        <h5 class="card-title">{{ lightNovelCard.title }}</h5>
+      </a>
       <i
         class="ms-2 bi"
         [ngClass]="isFavourite ? 'bi-heart-fill text-danger' : 'bi-heart'"
         (click)="toggleFavourite($event)"
       ></i>
     </div>
-    <div class="text-center">
+    <div>
       <p class="card-text">{{ lightNovelCard.created_at }}</p>
       <p class="card-text">{{ lightNovelCard.description }}</p>
     </div>
