refactor: Fix missing closing tag in user-card.component.html

--- a/angular/src/app/shared-components/user-card/user-card.component.html
+++ b/angular/src/app/shared-components/user-card/user-card.component.html
@@ -71,7 +71,7 @@
       </button>
     </div>
     <div class="modal-body">
-      <form #userForm="ngForm" (ngSubmit)="updateUser()">
+      <form #userForm="ngForm" (ngSubmit)="updateUser()"></form>
         <div class="form-group">
           <label for="name">Nome</label>
           <input
