--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -156,6 +156,12 @@
           <button (click)="addLightNovel()" class="btn btn-primary">
             Crea
           </button>
+          <button (click)="cleanForum()" class="btn btn-primary">
+            Svuota
+          </button>
+          <button (click)="redirectToHome()" class="btn btn-primary">
+            prova
+          </button>
         </form>
       </section>
     </div>
