--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -9,6 +9,21 @@
     <div class="col-12">
       <div>
         <i class="bi bi-list-ul"></i>
+        <div ngbDropdown class="d-inline-block">
+          <button
+            type="button"
+            class="btn btn-outline-primary"
+            id="dropdownBasic1"
+            ngbDropdownToggle
+          >
+            Generi
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <button ngbDropdownItem>Action - 1</button>
+            <button ngbDropdownItem>Another Action</button>
+            <button ngbDropdownItem>Something else is here</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -19,21 +34,5 @@
     <div class="col" *ngFor="let lightNovel of lightNovelsArray">
       <app-card-home [lightNovelCard]="lightNovel"></app-card-home>
     </div>
-  </div>
-</div>
-
-<div ngbDropdown class="d-inline-block">
-  <button
-    type="button"
-    class="btn btn-outline-primary"
-    id="dropdownBasic1"
-    ngbDropdownToggle
-  >
-    Toggle dropdown
-  </button>
-  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-    <button ngbDropdownItem>Action - 1</button>
-    <button ngbDropdownItem>Another Action</button>
-    <button ngbDropdownItem>Something else is here</button>
   </div>
 </div>
