--- a/angular/src/app/pages/light-novel-details/light-novel-details.component.html
+++ b/angular/src/app/pages/light-novel-details/light-novel-details.component.html
@@ -1,1 +1,16 @@
-<p>light-novel-details works!</p>
+<div class="container" *ngIf="lightNovel">
+  <div class="row">
+    <div class="col d-flex justify-content-center my-5">
+      <div class="card">
+        <img
+          [src]="lightNovel.image_url"
+          class="card-img-top img-fluid"
+          alt="{{ lightNovel.title }}'s img"
+        />
+        <div class="card-body d-flex flex-column align-items-center mt-4">
+          <h5 class="card-title mb-2">Titolo: {{ lightNovel.title }}</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
