--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -1,5 +1,5 @@
 <div class="card d-flex align-items-center my-3 flex-row">
-  <a routerLink="/lightNovelDetail/{{ lightNovelCard.id }}">
+  <a routerLink="/lightNovelDetails/:{{ lightNovelCard.id }}">
     <img
       [src]="lightNovelCard.image_url"
       class="card-img-left"
@@ -10,7 +10,7 @@
     class="card-body d-flex flex-column align-items-start justify-content-center ms-3"
   >
     <div class="d-flex align-items-center">
-      <a routerLink="/lightNovelDetail/{{ lightNovelCard.id }}">
+      <a routerLink="/lightNovelDetails/{{ lightNovelCard.id }}">
         <h5 class="card-title">{{ lightNovelCard.title }}</h5>
       </a>
       <i
