--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -2,7 +2,16 @@
   <div class="row">
     <div class="col-12">
       <h2>AREA CAROSELLO</h2>
+      <splide>
+        <splide-slide>
+          <img src="../../../assets/img/401.png" alt="" />
+        </splide-slide>
+        <splide-slide>
+          <img src="../../../assets/img/404.png" alt="" />
+        </splide-slide>
+      </splide>
     </div>
+
     <div class="col"></div>
   </div>
   <div class="row">
