refactor: Update light novel details component to lazy load images

--- a/angular/src/app/pages/light-novel-details/light-novel-details.component.html
+++ b/angular/src/app/pages/light-novel-details/light-novel-details.component.html
@@ -3,9 +3,11 @@
     <div class="col d-flex justify-content-center my-5">
       <div class="card">
         <img
-          [src]="lightNovel.image_url"
-          class="card-img-top img-fluid"
-          alt="{{ lightNovel.title }}'s img"
+          [src]="
+            '../../../assets/img/lightNovelImg/' + lightNovel.title + '.png'
+          "
+          class="card-img-left"
+          alt="{{ lightNovel.title }}"
         />
         <div class="card-body d-flex flex-column align-items-center mt-4">
           <h5 class="card-title mb-2">Titolo: {{ lightNovel.title }}</h5>
