--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -1,7 +1,9 @@
 <div class="card d-flex align-items-center my-3 flex-row">
   <a routerLink="/lightNovelDetails/:{{ lightNovelCard.id }}">
     <img
-      [src]="lightNovelCard.image_url"
+      [src]="
+        '../../../assets/img/lightNovelImg/' + lightNovelCard.title + '.png'
+      "
       class="card-img-left"
       alt="{{ lightNovelCard.title }}"
     />
