--- a/angular/src/app/pages/home/home.component.html
+++ b/angular/src/app/pages/home/home.component.html
@@ -1,13 +1,23 @@
-<div class="container">
+<div
+  class="container-fluid"
+  [ngStyle]="{
+    backgroundImage: 'url()'
+  }"
+>
   <div class="row">
     <div class="col-12">
       <h2>AREA CAROSELLO</h2>
       <splide>
-        <splide-slide>
-          <img src="../../../assets/img/401.png" alt="" />
-        </splide-slide>
-        <splide-slide>
-          <img src="../../../assets/img/404.png" alt="" />
+        <splide-slide *ngFor="let lightNovel of lightNovelsArray">
+          <img
+            [src]="
+              '../../../assets/img/lightNovelImg/' +
+              replaceSpacesWithDashes(lightNovel.title) +
+              '.png'
+            "
+            alt="{{ lightNovel.title }}"
+          />
+          <p class="bg-dark text-white">{{ lightNovel.title }}</p>
         </splide-slide>
       </splide>
     </div>
