--- a/angular/src/app/shared-components/card-home/card-home.component.html
+++ b/angular/src/app/shared-components/card-home/card-home.component.html
@@ -1,5 +1,5 @@
 <div class="card d-flex align-items-center my-3 flex-row">
-  <a routerLink="/lightNovelDetails/:{{ lightNovelCard.id }}">
+  <a routerLink="/lightNovelDetails/{{ lightNovelCard.id }}">
     <img
       [src]="
         '../../../assets/img/lightNovelImg/' +
