--- a/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
+++ b/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
@@ -1,1 +1,4 @@
-<p>my-light-novel works!</p>
+<div *ngFor="let novel of novels">
+  <h2>{{ novel.title }}</h2>
+  <p>{{ novel.description }}</p>
+</div>
