--- a/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
+++ b/angular/src/app/pages/profile/my-light-novel/my-light-novel.component.html
@@ -1,38 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div *ngFor="let novel of novels" class="col">
-      <div class="card d-flex align-items-center my-3 flex-row overflow-hidden">
-        <a routerLink="/lightNovelDetails/{{ novel.id }}">
-          <img
-            [src]="
-              '../../../assets/img/lightNovelImg/' +
-              replaceSpacesWithDashes(novel.title) +
-              '.png'
-            "
-            class="card-img-left"
-            alt="{{ novel.title }}"
-            id="img"
-          />
-        </a>
-        <div
-          class="card-body d-flex flex-column align-items-start justify-content-center ms-3"
-        >
-          <div class="d-flex align-items-center">
-            <a routerLink="/lightNovelDetails/{{ novel.id }}">
-              <h5 class="card-title">{{ novel.title }}</h5>
-            </a>
-            <i
-              class="ms-2 bi"
-              [ngClass]="isFavourite ? 'bi-heart-fill text-danger' : 'bi-heart'"
-              (click)="toggleFavourite($event)"
-            ></i>
-          </div>
-          <div>
-            <small class="card-text">{{ novel.created_at }}</small>
-            <p class="card-text">{{ novel.description }}</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<p>my-light-novel works!</p>
