--- a/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
+++ b/angular/src/app/shared-components/light-novel-form/light-novel-form.component.html
@@ -145,6 +145,9 @@
             Crea
           </button>
           <button (click)="cleanForum()" class="btn btn-primary">Svuota</button>
+          <button (click)="redirectToHome()" class="btn btn-primary">
+            prova
+          </button>
         </form>
       </section>
     </div>
