--- a/angular/src/app/shared-components/user-card/user-card.component.html
+++ b/angular/src/app/shared-components/user-card/user-card.component.html
@@ -16,10 +16,10 @@
         <td>
           <div class="text-center">
             <img
-              [src]="user.userImage"
+              src="http://place-hold.it/300"
               alt="icon"
               class="rounded-circle"
-              style="width: 60px; height: 60px"
+              style="width: 24px; height: 24px"
             />
           </div>
         </td>
